[gd_scene load_steps=2 format=3 uid="uid://be0q61aecxaq7"]

[ext_resource type="Script" path="res://src/FindReplaceDialog.gd" id="1_0selc"]

[node name="FindReplaceDialog" type="Window"]
title = "Find/Replace text"
position = Vector2i(0, 36)
size = Vector2i(400, 150)
transient = true
exclusive = true
script = ExtResource("1_0selc")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="SearchLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Search"

[node name="FindEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ReplaceLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Replace"

[node name="ReplaceEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FindButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Find"

[node name="ReplaceButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Replace All"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/FindButton" to="." method="_on_find_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/ReplaceButton" to="." method="_on_replace_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
